# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.23 2006/02/20 18:25:32 dcoutts Exp $

  20 Feb 2006; <duncan@gentoo.org> +files/gtk2hs-0.9.10-ghc622.patch,
  gtk2hs-0.9.10.ebuild:
  Fix building with ghc-6.2.2. Fixes bug #115657.

  14 Feb 2006; <duncan@gentoo.org> +files/gtk2hs-0.9.10-cflags.patch,
  gtk2hs-0.9.10.ebuild:
  Added a patch to fix the use of CFLAGS which was causing problems on sparc.
  Marked ~sparc.

  10 Feb 2006; <duncan@gentoo.org> -gtk2hs-0.9.6-r1.ebuild,
  -gtk2hs-0.9.8.ebuild:
  Remove old versions.

  28 Jan 2006; Simon Stelling <blubb@gentoo.org>
  -files/gtk2hs-0.9.7-ghc64.patch.gz, gtk2hs-0.9.7.ebuild:
  move compressed patches to the mirros

  14 Dec 2005; <duncan@gentoo.org> gtk2hs-0.9.10.ebuild:
  Make the DEPEND include the RDEPEND.

  12 Nov 2005; <duncan@gentoo.org> gtk2hs-0.9.10.ebuild:
  Fix failure when USE="glade -gnome" (bug #112227)

  06 Nov 2005; <duncan@gentoo.org> gtk2hs-0.9.10.ebuild:
  Fix generation of cairo GHCi lib.

*gtk2hs-0.9.10 (02 Nov 2005)

  02 Nov 2005; <duncan@gentoo.org> +gtk2hs-0.9.10.ebuild:
  Added new version.

*gtk2hs-0.9.9 (31 Aug 2005)

  31 Aug 2005; <duncan@gentoo.org> +gtk2hs-0.9.9.ebuild:
  Added new version.

  31 Aug 2005; <duncan@gentoo.org> gtk2hs-0.9.7.ebuild, gtk2hs-0.9.8.ebuild:
  Make gtk2hs-0.9.7 and gtk2hs-0.9.8 use only haddock-0.6 since they will not
  work with haddock-0.7.

  30 Jun 2005; David Holm <dholm@gentoo.org> gtk2hs-0.9.8.ebuild:
  Added to ~ppc.

*gtk2hs-0.9.8 (24 Jun 2005)

  24 Jun 2005; <duncan@gentoo.org> gtk2hs-0.9.7.ebuild,
  +gtk2hs-0.9.8.ebuild:
  New version.

  20 May 2005; <duncan@gentoo.org> gtk2hs-0.9.7.ebuild:
  Added ~sparc to KEYWORDS.

  08 May 2005; Duncan Coutts <dcoutts@gentoo.org>
  +files/gtk2hs-0.9.7-ghc64.patch, gtk2hs-0.9.7.ebuild:
  Add a patch for ghc-6.4 compatability.
