@@ -1,15 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 8eda91ad94e64aa34243be7c6fd2daa9 ChangeLog 3009
-RMD160 0b7560516c906a47ef3962267f2ed46f17f31554 ChangeLog 3009
-SHA256 80843ad70129c678bca5743f71e7b5b997fd44f94948b5158e0335de0b1d9c4f ChangeLog 3009
+MD5 b5429e038bcc6ec0db6a8ede60012f6a ChangeLog 3095
+RMD160 77bead1ebdaeb50656bcd32a4fb495b0c064d097 ChangeLog 3095
+SHA256 b9601dc959025cc17d2cc9172d498bee602367bcefba2ea6d5133bd9b99040b5 ChangeLog 3095
 MD5 d165e3eb925c10e6c6316aec5b6b7477 files/digest-gtk2hs-0.9.10 241
 RMD160 935c458d76ad82bde6181be1f45d59deb695926d files/digest-gtk2hs-0.9.10 241
 SHA256 501f52c81b4d0072d05c93246175010dc391d7bf6b3e8b36f3d6eeed99a436bd files/digest-gtk2hs-0.9.10 241
-MD5 a047e2d5a7b724ba3e75c21b0efed475 files/digest-gtk2hs-0.9.7 134
-RMD160 e1ec758e0abe34a420edae46b9d9e4ffc8109315 files/digest-gtk2hs-0.9.7 134
-SHA256 a49e0733cc2bf627019c65c157b510849c9c0a26e6ffcd553a78f0cc3838580f files/digest-gtk2hs-0.9.7 134
 MD5 a0148d13d7414bb83ec383c7124ea654 files/digest-gtk2hs-0.9.9 64
 RMD160 0363b492a3048160b3ae3cd414bf15e54ef16957 files/digest-gtk2hs-0.9.9 64
 SHA256 6f6c55dfd880134a0fe7d0e247b9244c0c65212f0fa5ec9a42825065e7576dee files/digest-gtk2hs-0.9.9 64
@@ -22,9 +19,6 @@ SHA256 48d5b2565eb8a77658f0e6950e021cbf1a0c88ba2810fd8f4ece0c92d4d23b66 files/gt
 MD5 1e37717107b11351074d56db76dae73a gtk2hs-0.9.10.ebuild 3529
 RMD160 d82105f2dd360b6603d217759ac91cf3851e16b5 gtk2hs-0.9.10.ebuild 3529
 SHA256 b30df92437c0b89548567cd1613927eca5feaabbba81c9730b2c10130abd3544 gtk2hs-0.9.10.ebuild 3529
-MD5 1d0ad325305cc65427866006d30132b8 gtk2hs-0.9.7.ebuild 2875
-RMD160 18c5323909695132a3756f030c7c267c5cf3b465 gtk2hs-0.9.7.ebuild 2875
-SHA256 3c77f5f07d69af6e1709844caeba48d77c0caa73d98e06a45fe65bac30e8e3a5 gtk2hs-0.9.7.ebuild 2875
 MD5 05c2042c54431c623ff56c03e7b5c1f1 gtk2hs-0.9.9.ebuild 2698
 RMD160 6df67a58d8596e648acbdf6c2d369bf032f681ba gtk2hs-0.9.9.ebuild 2698
 SHA256 aa1337b8b7f89adb27b00e3ad5f73f20665c61cdd1853c651b82d0b661c9f43c gtk2hs-0.9.9.ebuild 2698
@@ -34,7 +28,7 @@ SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792 metadata
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.1 (GNU/Linux)
 
-iD8DBQFD+gmc/B0cxt+cq+wRAngKAJ9ZWD5yAtVtAsUTKxMPJZplPd2wwACeLNJT
-L36qQahvXvZlioZKdvclZtk=
-=N17K
+iD8DBQFD+gpQ/B0cxt+cq+wRAkfVAKCXCKsoQNNlqnpKJuVYx4EDmzp48QCgqaus
+I+gdksX0EiycaFb3MaSq8Rs=
+=k03O
 -----END PGP SIGNATURE-----
