@@ -1,2 +1,0 @@
-MD5 690f4192d427c43531d990e34ff0ad0b gtk2hs-0.9.7-ghc64.patch.gz 6986
-MD5 af4476dec61c82bd522b537155282fb9 gtk2hs-0.9.7.tar.gz 546945
