@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/gtk2hs
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.23 2006/02/20 18:25:32 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.24 2006/02/20 18:28:33 dcoutts Exp $
+
+  20 Feb 2006; <duncan@gentoo.org> -gtk2hs-0.9.7.ebuild:
+  Remove old 0.9.7 version.
 
   20 Feb 2006; <duncan@gentoo.org> +files/gtk2hs-0.9.10-ghc622.patch,
   gtk2hs-0.9.10.ebuild:
